Install webpack as dev dependency

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ZalkinV/Web2.Lab1/issues"
   },
-  "homepage": "https://github.com/ZalkinV/Web2.Lab1#readme"
+  "homepage": "https://github.com/ZalkinV/Web2.Lab1#readme",
+  "devDependencies": {
+    "webpack": "^4.41.2"
+  }
 }
