tests. Create display.tetst.js with simple test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode=production",
     "start": "webpack-dev-server --mode=development",
-    "test": "mocha"
+    "test": "mocha ./tests"
   },
   "repository": {
     "type": "git",
