--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handlebars": "^4.5.1",
     "handlebars-loader": "^1.7.1",
     "mocha": "^6.2.2",
+    "sinon": "^7.5.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
