--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production --output=build/main.js",
     "start": "webpack-dev-server --mode=development",
     "test": "mocha ./tests --require @babel/register"
   },
