--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/register": "^7.7.0",
     "chai": "^4.2.0",
+    "gh-pages": "^2.1.1",
     "handlebars": "^4.5.1",
     "handlebars-loader": "^1.7.1",
     "mocha": "^6.2.2",
